@@ -13,6 +13,8 @@ python-apt (0.8.4) UNRELEASED; urgency=low
   * python/tag.cc, tests/test_tagfile.py:
     - add support a filename argument in apt_pkg.TagFile() (in addition
       to the file object currently supported)
+  * apt/package.py:
+    - if there is no Version.uri return None
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 04 Jan 2012 12:07:48 +0100
 
